Grace/tests/gibbs/errors/t150.grace
// ERROR = P1018
var x : Number |
